<resources>
    <string name="app_name">Accounting</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_login">Login</string>
    <string name="error_connection_timeout">Connection timeout</string>
    <string name="error_unauthorized">Unauthorized</string>
    <string name="error_bad_request">Bad Request</string>
    <string name="error_not_found">Not Found</string>
    <string name="error_generic">Something went wrong. Please, try again</string>
    <string name="accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="categories_total_spent">Categories Total Spent</string>
    <string name="choose_category">Choose category:</string>
    <string name="enter_amount">Enter amount:</string>
    <string name="amount">Amount</string>
    <string name="choose_account">Choose account:</string>
    <string name="add_accounts">Add account</string>
    <string name="hint_title">Title</string>
    <string name="currency">Currency</string>
    <string name="hint_current_amount">Current amount</string>
    <string name="save">Save</string>
    <string name="hint_category_title">Title</string>
    <string name="category_title_hint">Enter category title:</string>
    <string name="add_category">Add Category</string>
    <string name="logout">Logout</string>
    <string name="hint_transaction_message">Message (Optional)</string>
    <string name="account_type">Account type:</string>
    <string name="account_amount">Amount:</string>
    <string name="category">Category:</string>
    <string name="total_spent">Total spent:</string>
    <string name="number_of_transactions">Number of transactions:</string>
    <string name="categories_spent">Categories Total Spent</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="generate">Generate</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="unknown">Unknown</string>
    <string name="time_report">Time report</string>
    <string name="date">Date:</string>
    <string name="total_amount">Total amount:</string>
    <string name="all_time_report">All time report</string>
    <string name="plans">Plans</string>
    <string name="select_your_account">Select your account:</string>
    <string name="enter_new_amount">Enter new amount:</string>
    <string name="change_remaining">Change remaining</string>
    <string name="for_card_you_earned_template">For the %1$s you earned %2$s %3$s in total. Number of transactions: %4$s</string>
    <string name="for_card_you_lost_template">Total spent for this card %1$s %2$s with amount of transactions: %3$s</string>

    <string name="for_all_time_you_earned_template">You earned %1$s UAH in %2$s transactions</string>
    <string name="for_all_time_you_spent_template">You spent %1$s UAH in %2$s transactions</string>
    <string name="predictions">Predictions</string>
    <string name="formula_n">Formula: %1$s</string>
    <string name="coef_n">Coef: %1$s</string>
</resources>
