<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/settings_add_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="72dp"
        android:text="@string/add_accounts"
        app:cornerRadius="24dp" />

    <Button
        android:id="@+id/settings_add_category_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:text="@string/add_category"
        app:cornerRadius="24dp" />

    <Button
        android:id="@+id/settings_change_remaining_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:text="@string/change_remaining"
        app:cornerRadius="24dp" />

    <Button
        android:id="@+id/settings_categories_total_spent_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:text="@string/categories_spent"
        app:cornerRadius="24dp" />

    <Button
        android:id="@+id/settings_time_report_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:text="@string/time_report"
        app:cornerRadius="24dp" />

    <Button
        android:id="@+id/settings_total_time_report_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:text="@string/all_time_report"
        app:cornerRadius="24dp" />

    <Button
        android:id="@+id/settings_predictions_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:text="@string/predictions"
        app:cornerRadius="24dp" />

    <Button
        android:id="@+id/settings_logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:text="@string/logout"
        app:cornerRadius="24dp" />


</LinearLayout>