<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_account_title_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_account_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_account_currency_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/add_account_title_input"
        app:layout_constraintStart_toStartOf="@+id/add_account_title_input"
        app:layout_constraintTop_toBottomOf="@+id/add_account_title_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_account_currency_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currency" />
    </com.google.android.material.textfield.TextInputLayout>

    <NumberPicker
        android:id="@+id/add_account_type_picker"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_account_currency_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_account_amount_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/add_account_currency_input"
        app:layout_constraintStart_toStartOf="@+id/add_account_currency_input"
        app:layout_constraintTop_toBottomOf="@+id/add_account_type_picker">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_account_amount_edit_text"
            android:layout_width="match_parent"
            android:inputType="numberSigned"
            android:layout_height="wrap_content"
            android:hint="@string/hint_current_amount" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_account_save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:text="@string/save"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_account_amount_input" />


</androidx.constraintlayout.widget.ConstraintLayout>