<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_medium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/item_daily_report_day_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_daily_report_total_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total_amount"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="@+id/item_daily_report_day_text_view"
            app:layout_constraintTop_toBottomOf="@+id/item_daily_report_day_text_view" />

        <TextView
            android:id="@+id/item_daily_report_transactions_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/number_of_transactions"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/item_daily_report_total_text_view"
            app:layout_constraintTop_toBottomOf="@+id/item_daily_report_total_text_view" />

        <TextView
            android:id="@+id/item_daily_report_number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="@+id/item_daily_report_transactions_text_view"
            app:layout_constraintStart_toEndOf="@+id/item_daily_report_transactions_text_view" />

        <TextView
            android:id="@+id/item_daily_report_total_amount_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toTopOf="@+id/item_daily_report_number_text_view"
            app:layout_constraintEnd_toEndOf="@+id/item_daily_report_number_text_view" />

        <TextView
            android:id="@+id/item_daily_report_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toTopOf="@+id/item_daily_report_total_amount_text_view"
            app:layout_constraintEnd_toEndOf="@+id/item_daily_report_number_text_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>