<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:strokeColor="@color/colorPrimary"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/item_total_spent_category_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/category"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_total_spent_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="@+id/item_total_spent_amount"
            app:layout_constraintTop_toTopOf="@+id/item_total_spent_category_name_hint"
            tools:text="Some category" />

        <TextView
            android:id="@+id/item_total_spent_amount_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/total_spent"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="@+id/item_total_spent_category_name_hint"
            app:layout_constraintTop_toBottomOf="@+id/item_total_spent_category_name_hint" />

        <TextView
            android:id="@+id/item_total_spent_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="@+id/item_total_spent_amount_hint"
            app:layout_constraintStart_toStartOf="@+id/item_total_spent_number_of_transactions"
            app:layout_constraintTop_toTopOf="@+id/item_total_spent_amount_hint"
            tools:text="13450" />

        <TextView
            android:id="@+id/item_total_spent_number_of_transactions_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/number_of_transactions"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/item_total_spent_amount_hint"
            app:layout_constraintTop_toBottomOf="@+id/item_total_spent_amount_hint" />

        <TextView
            android:id="@+id/item_total_spent_number_of_transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="@+id/item_total_spent_number_of_transactions_hint"
            app:layout_constraintStart_toEndOf="@+id/item_total_spent_number_of_transactions_hint"
            app:layout_constraintTop_toTopOf="@+id/item_total_spent_number_of_transactions_hint"
            tools:text="13450" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
